# microrepos

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .topwing.yaml  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: code-quality.yaml  create-tag.yaml
resources/: postgres-docker-compose.yml
tests/: test_packaging_attribute.py  utils.py
topwing/: __init__.py  cli.py  config.py  cvs.py  cvs_server.py  engine.py  exceptions.py  project_builder.py  registry.py
topwing/plugins/: cookiecutter.py
